# blogr

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
blogr-cli/: Cargo.toml  README.md
blogr-cli/src/: config.rs  content.rs  main.rs  project.rs
blogr-cli/src/commands/: config.rs  list.rs  new.rs  newsletter.rs  project.rs  serve.rs  theme.rs
blogr-cli/src/generator/: markdown.rs  search_index.rs  site.rs
blogr-cli/src/newsletter/: api.rs  composer.rs  config.rs  database.rs  fetcher.rs  migration.rs  mod.rs  sender.rs  webhooks.rs
blogr-cli/src/newsletter/ui/: approval.rs
blogr-cli/src/templates/email/: custom.html
blogr-cli/src/tui/: config_app.rs  markdown.rs
blogr-themes/: Cargo.toml  README.md
blogr-themes/src/: lib.rs
blogr-themes/src/brutja/assets/: brutja-default.css
blogr-themes/src/brutja/templates/: archive.html  base.html  post_card.html
blogr-themes/src/dark_minimal/assets/: style.css
blogr-themes/src/dark_minimal/templates/: base.html
blogr-themes/src/minimal_retro/templates/: archive_simple.html  base.html  index.html  index_simple.html  tag.html
blogr-themes/src/musashi/assets/: style.css
blogr-themes/src/musashi/templates/: base.html
blogr-themes/src/obsidian/assets/: obsidian-default.css
blogr-themes/src/obsidian/templates/: archive.html  base.html  index.html  tag.html
blogr-themes/src/slate_portfolio/assets/: style.css
blogr-themes/src/slate_portfolio/templates/: base.html
blogr-themes/src/terminal_candy/assets/: style.css
blogr-themes/src/terminal_candy/templates/: archive.html  base.html  index.html  tag.html
blogr-themes/src/typewriter/assets/: style.css
blogr-themes/src/typewriter/templates/: base.html
docs/: COMMANDS.md
examples/sample-blog/: README.md  blogr.toml
examples/sample-blog/posts/: mathjax-demo.md  syntax-highlighting-showcase.md
examples/syntax-highlighting/: README.md  blogr.toml
