[package]
name = "blogr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI static site generator for blogs"

[[bin]]
name = "blogr"
path = "src/main.rs"

[dependencies]
blogr-themes = { version = "0.3.0", path = "../blogr-themes" }
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
pulldown-cmark = "0.13"
syntect = "5.3"
tera = "1.19"
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = "0.20"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
url = "2.4"
serde_json = "1.0"
serde_yaml = "0.9"
open = "5.0"
urlencoding = "2.1"

# Newsletter dependencies
imap = "2.3.0"
native-tls = "0.2"
mailparse = "0.16"
rusqlite = { version = "0.37", features = ["bundled"] }
lettre = "0.11"
html2text = "0.15"
css-inline = "0.17"

[dev-dependencies]
tempfile = "3.23"
