[package]
name = "blogr-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI static site generator for blogs"

[[bin]]
name = "blogr"
path = "src/main.rs"

[dependencies]
blogr-themes = { version = "0.4.1", path = "../blogr-themes" }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"
pulldown-cmark = "0.13"
syntect = "5.3"
tera = "1.20"
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
git2 = "0.20"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tokio = { version = "1.49", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = { workspace = true }
uuid = { version = "1.21", features = ["v4"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
url = "2.5"
serde_json = "1.0"
serde_yaml = "0.9"
open = "5.3"
urlencoding = "2.1"
strum = { version = "0.27.2", features = ["derive"] }
notify = "7.0"
notify-debouncer-mini = "0.5"
tokio-stream = { version = "0.1", features = ["sync"] }

# Newsletter dependencies
imap = "2.3.0"
native-tls = "0.2"
mailparse = "0.16"
rusqlite = { version = "0.37", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
html2text = "0.16"
css-inline = "0.18"
rpassword = "5.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"
futures = "0.3"

[dev-dependencies]
tempfile = "3.25"
